Lisha random forest edited

--- a/writeupLab4.tex
+++ b/writeupLab4.tex
@@ -315,6 +315,62 @@ To gather a quantitative measurement of the importance of each feature, we first
 \end{wrapfigure}
 {\bf Where was the model performing poorly?}
 
+  \begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_1.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_1.png}
+\endminipage\hfill
+\end{figure}
+
+  \begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_3.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_3.png}
+\endminipage\hfill
+\end{figure}
+
+\begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_4.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_4.png}
+\endminipage\hfill
+\end{figure}
+
+
+\begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_9.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_9.png}
+\endminipage\hfill
+\end{figure}
+
+  \begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_10.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_10.png}
+\endminipage\hfill
+\end{figure}
+
+\begin{figure}[H]
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts ]{classification_11.png}
+\endminipage\hfill
+\minipage{0.5\textwidth}
+  \includegraphics[width=\linewidth, height = 180pts]{label_11.png}
+\endminipage\hfill
+\end{figure}
+
+
 \section{Reproducibility}
 
 {\bf How we organized out code and github repo}
