--- a/writeupLab4.tex
+++ b/writeupLab4.tex
@@ -77,6 +77,7 @@
 \newtheorem{proposition}{Proposition}[section]
 \newtheorem{definition}{Definition}[section]
 
+\graphicspath{{./figures/}}
 
 \begin{document}
 
