--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -77,7 +77,7 @@
 \newtheorem{proposition}{Proposition}[section]
 \newtheorem{definition}{Definition}[section]
 
-\graphicspath{{./figures/}}
+\graphicspath{{../figures/}}
 
 \begin{document}
 
