--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -96,13 +96,13 @@ Blah blah...
 
 \subsection{Plots of Raw and Expertly Labelled Images}
 Figure 1 displays the unprocessed image files for comparison with Figure 2, the expertly-labelled files. With the human eye it is not so difficult to parse cloud from ground based on these images, but we see that cloudy and clear pixels alike run through wide spans of AN so other features must be used.
-\begin{figure}[H]
-\includegraphics[width = 18cm, height=8cm]{RAWEDA.png}
+\begin{figure}[]
+\includegraphics[width = 18cm, height=5cm]{RAWEDA.png}
 \caption{Raw images with AN radiances.}
 \end{figure}
 
-\begin{figure}[H]
-\includegraphics[width = 18cm, height=8cm]{EXPERTSEDA.png}
+\begin{figure}[]
+\includegraphics[width = 18cm, height=5cm]{EXPERTSEDA.png}
 \caption{Images with expert classifications. Proportions: 39.8$\%$ unknown, 23.4$\%$ cloudy, 36.8$\%$ clear.}
 \end{figure}
 \subsection{Densities of NDAI, SD and CORR}
@@ -174,17 +174,17 @@ Figure \ref{fig:Scatter} shows hope that our selected features may be able to di
 \subsection{Mapped Features}
 The ensuing figures plot the engineered feature values (NDAI, SD, CORR) spatially. In agreement with the NDAI density plots, higher NDAI values indicate increased likelihood of the presence of clouds, and the NDAI plots look quite similar to the binary classification plots. The SD maps show areas of high variance in the radiances thereby providing a decent outline of cloud boundaries. Unfortunately, this can also lead to the highlighting of uneven ground regions. Finally, the CORR images resemble weakened versions of their NDAI counterparts though with some additional strange behavior in the bottom left corners of Images 1 and 2. 
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 8cm]{NDAIEDA.png}
+\includegraphics[width = 18cm, height = 5cm]{NDAIEDA.png}
 \caption{Mapped NDAI readings. We see good correspondence between larger values and presence of clouds.}
 \end{figure}
 
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 8cm]{SDEDA.png}
+\includegraphics[width = 18cm, height = 5cm]{SDEDA.png}
 \caption{Mapped SD readings. Higher values show cloud boundaries, though also show uneven terrain.}
 \end{figure}
 
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 8cm]{CORREDA.png}
+\includegraphics[width = 18cm, height = 5cm]{CORREDA.png}
 \caption{Mapped CORR readings. Cloudy regions tend to be lighter, but not as strongly as in NDAI.}
 \end{figure}
 
@@ -260,10 +260,12 @@ Cross-validation for QDA revealed that while the method works extremely well in 
   \label{fig:QDA}
 \end{figure}
 
-\subsection{Logit/Probit}
-The logit model obtained via averaging after 12-fold cross-validation has $y_i = -3.356 + 1.900 * NDAI_i - 0.074 * SD_i + 9.002 * CORR_i$ where $P_i$(Cloud) = $ \frac{1}{1 + e^{-y_i}}$. 
+\subsection{Logit}
+Logistic regression is a widely-used discriminative classification model arising from the class of generalized linear models. It is among the simplest classification methods and models the conditional distribution of the outcome given the covariates as a Bernoulli random variable with success probability given by the logistic function evaluated at $X_i \beta$, where $X_i$ is the covariate vector and $\beta$ the coefficient vector. It further supposes that the response variables are independent conditioned on the observed features. To classify, a threshold probability is chosen and all response variables with success probability above this value are labelled a success; otherwise, they are denoted as a failure. In our case, success is equivalent to cloudy and failure to clear. Preliminary results showed similar performance between the probit and logit models,  so we chose to focus on logit due its fewer assumptions (probit requires homoscedasticity and normality of errors) and greater ubiquity in practice. Use of logistic regression also assumes that the model has been properly specified with all significant and no extraneous predictors included. 
 
-To choose our cutoff value for declaring a pixel cloudy, we varied the cutoffs from .01 to 1 and calculated the misclassification error of our model at that threshold on expertly-labelled pixels. The figure below shows that the optimal threshold for this model is at .38, with an error of just under 10.1$\%$. As a consequence of this low threshold, we observe more false positives than false negatives. This will be further explored below.
+The logit model obtained via averaging after 12-fold cross-validation has $y_i = -3.356 + 1.900 * NDAI_i - 0.074 * SD_i + 9.002 * CORR_i$ where $P_i$(Cloud) = $ \frac{1}{1 + e^{-y_i}}$. To choose our cutoff value for declaring a pixel cloudy, we varied the cutoffs from .01 to 1 and calculated the misclassification error of our model at that threshold on expertly-labelled pixels. The figure below shows that the optimal threshold for this model is at .38, with an error of just under 10.1$\%$. As a consequence of this low threshold, we observe more false positives than false negatives. This will be further explored below.
+
+Cross-validation was done by dividing each image into quandrants and holding one quadrant out for testing in each iteration of training. There were thus 12-folds in the CV procedure. We chose blocks to comprise each fold rather than a random subsample of points in order to compensate for the correlation of errors among neighboring points. 
 
 \begin{figure}[H]
 \begin{center}
@@ -272,37 +274,36 @@ To choose our cutoff value for declaring a pixel cloudy, we varied the cutoffs f
 \end{center}
 \end{figure}
 
-Figure 15 gives the binary classifications overlaid on the images. Visual comparision with the expertly-labelled images suggests that we are slightly biased towards the presence of clouds as 74.2$\%$ of unlabelled points have been classified as cloudy, though this may be due to some artifact of the expert labelling scheme.
+Figure 15 gives the binary classifications overlaid on the images. Visual comparision with the expertly-labelled images suggests that we are slightly biased towards the presence of clouds as 74.2$\%$ of unlabelled points have been classified as cloudy, though this may be due to a lack of power in the expert labelling scheme.
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 8cm]{LogitClassification.png}
+\includegraphics[width = 18cm, height = 5cm]{LogitClassification.png}
 \caption{Binary classifications with threshold = .38 for logit trained via 12-fold CV.}
 \end{figure}
 
 Here we see the logit probabilites plotted spatially. This should approximate how the image would appear if the ground were not covered in snow and ice, so comparison with Figure 1 is especially appropriate. 
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 8cm]{LogitProbabilities.png}
+\includegraphics[width = 18cm, height = 5cm]{LogitProbabilities.png}
 \caption{Probabilities for logit trained via 12-fold CV.}
 \end{figure}
 
 \begin{figure}[H]
-\includegraphics[width = 18cm, height = 10cm]{ClassificationOutcomes.png}
+\includegraphics[width = 18cm, height = 5cm]{ClassificationOutcomes.png}
 \caption{Classification results from logit with respect to the expert labels.}
 \end{figure}
 
-We now discuss the trends in misclassification. As depicted in the above figure, we have many more false positives than false negatives with large regions sometimes completely misclassified. These regions are often situated on boundaries of labelled and unlabelled points. Calculation shows the false negative rate to be 7.5$\%$ and the false positive rate to be 11.7$\%$. 
+We now discuss the trends in misclassification. As depicted in the above figure, we have many more false positives than false negatives with large regions sometimes completely misclassified. These regions are often situated on boundaries of labelled and unlabelled points. Calculation shows the false negative rate to be 7.5$\%$ and the false positive rate to be 11.7$\%$. Models with interaction terms were considered and yielded very slight improvement as measured by drop in misclassification rate from .104 to .092. However, comparison of the misclassification plots showed that the increased complexity did not resolve the large clusters of false positives observed in each image. 
 
-\begin{figure}[H]
-\begin{center}
-\includegraphics[scale = .5]{LogitROC.png}
-\caption{ROC curve for our logit model. AUC is .95.}
-\end{center}
-\end{figure}
-
-\begin{figure}[H]
-\begin{center}
-\includegraphics[scale = .5]{ParameterConvergence.png}
-\caption{Coefficient values through iterations of 12-fold CV.}
-\end{center}
+\begin{figure}[h]
+  \centering 
+  \begin{subfigure}[b]{0.35\textwidth}
+    \includegraphics[width=\linewidth]{LogitROC.png}
+    \label{ROC}
+  \end{subfigure} 
+  \begin{subfigure}[b]{0.35\textwidth}
+    \includegraphics[width=\linewidth]{ParameterConvergence.png}
+    \label{Convergence in CV}
+  \end{subfigure}  
+    \caption{Left: ROC Curve with AUC=.95. Right: Parameter convergence through iterations of CV. 1 - Intercept, 2 - NDAI, 3 - SD, 4 - CORR}
 \end{figure}
 
 \subsection{Random Forest}
