--- a/tex/writeupLab4.tex
+++ b/tex/writeupLab4.tex
@@ -90,16 +90,14 @@ Stat 215A, Fall 2014}
 
 \maketitle
 \section{Introduction}
-\subsection{Data} Based on the recordings from the NASA's Multiangle Imaging SpectroRa-diometer (MISR) imagery, the data used to train the classification models is a collection of measurements from the three different images provided. Data units for these images were provided from MISR measurement of blocks 20-22 over three consecutive orbits. Instead of overfitting to individual images, we combined data to construct general classification models. The true classification of pixels is taken to be that provided by the expert and called as expert label. Nonetheless, some regions which was equivocal to the expert remained unlabelled.
+\subsection{Data} Based on the recordings from the NASA's Multi-angle Imaging SpectroRadiometer (MISR) imagery, the data used to train the classification models are a collection of measurements from the three different images provided. Data units for these images were provided from MISR measurement of blocks 20-22 over three consecutive orbits. Instead of overfitting to individual images, we combined data to construct general classification models. The true classification of pixels is taken to be provided by the expert labels. Nonetheless, some regions which were equivocal to the expert remained unlabelled.
 
-
-MISR collected electromagnetic radiation measurements using nine cameras at nine different angles, each of which views Earth scenes in four spectral bands (blue, green, red, and near-infrared).  MISR collects huge amount of Data due to its global coverage at high spatial resolution. Each MISR pixel encompasses 275m$\times$ 275m region, yielding tremendous amount of data. Due to this massiveness of the MISR readings and transmission channel constraints, only the red radiances were transmitted at full resolution from all cameras. It was also stated that all four bands have similar reflectance signatures over ice, snow, and clouds. Thus, only the red radiances which has high spatial resolution were used in constructing three features SD, CORR, and NDAI.  In our data, in addition to the three features, five of the nine angles' radiances were given.
+MISR collected electromagnetic radiation measurements using nine cameras at nine different angles, each of which views the Earth in four spectral bands (blue, green, red, and near-infrared).  MISR collects huge amount of data due to its global coverage at high spatial resolution. Each MISR pixel encompasses 275m$\times$275m region, yielding tremendous amounts of data. Due to the size of the MISR readings and transmission channel constraints, only the red radiances were transmitted at full resolution from all cameras. It was also stated that all four bands have similar reflectance signatures over ice, snow, and clouds. Thus, only the red radiances which have high spatial resolution were used in constructing three features SD, CORR, and NDAI.  In our data, in addition to the three features, five of the nine angles' radiances were given.
 
 \subsection{Features} The nine cameras had different views at the following angles: 70.5\textdegree (Df), 60.0\textdegree (Cf), 45.6\textdegree (Bf), and 26.1\textdegree (Af) in the forward direction; 0.0\textdegree (An) in the nadir direction and 26.1\textdegree (Aa), 45.6\textdegree (Ba), 60.0\textdegree (Ca), and 70.5\textdegree (Da) in the aft direction, where "f" indicated the forward
-direction, and "a" indicates the aft direction. Note that we are only given radiances for angles Df, Cf, Bf, An, Af. The nadir (vertically downward) viewing camera(An) has a strong advantage over cameras from other viewpoint since it is least influenced by atmospheric scattering and least distorted by surface topographic effects. Data derived from two angle Af and Aa cameras was aimed at determining topographic heights and cloud heights by using parallex from these two view angles. The two Bf and Ba camera are positioned to utilize aerosol sensitivity. Based on theoretical finding that the directionally oriented reflectance variation over different types of cloud is minimized at 60.0 degree angle, the two Cf and Ca cameras are positioned at 60.0 degree angle, which is also considered as crucial due to its significant role in estimating the amount of reflection at each ground point. High angle view of Df and Da cameras is designed to present maximal sensitivity to off-nadir effects. 
+direction, and "a" indicates the aft direction. Note that we are only given radiances for angles Df, Cf, Bf, An, Af. The nadir (vertically downward) viewing camera (An) has a strong advantage over cameras from other viewpoints since it is least influenced by atmospheric scattering and least distorted by surface topographic effects. Data derived from two angle Af and Aa cameras were aimed at determining topographic heights and cloud heights by using parallax from these two view angles. The two Bf and Ba cameras are positioned to utilize aerosol sensitivity. Based on theoretical findings that the directionally-oriented reflectance variation over different types of cloud is minimized at a 60.0 degree angle, the two Cf and Ca cameras are positioned at a 60.0 degree angle, which is also considered as crucial due to its significant role in estimating the amount of reflection at each ground point. The high angle view of Df and Da cameras is designed to present maximal sensitivity to off-nadir effects. 
 
-
-The features CORR, SD, and NDAI are an average linear correlation of radiation measurements at different view angles, the standard deviation within groups of MISR angle An camera red radiation measurements, and a ratio between the difference and sum of the mean radiation measurements from the first and fifth angle associated with a particular pixel region, respectively. It was stated that extensive exploratory data analysis combined with specific domain knowledge, such as the fact that ice and snow surfaces scatter radiation more isotropically than clouds, the three features are found to be most useful in differentiating surface pixels from cloudy ones. High values of CORR alludes to either cloud-free condition or the presence of low altitude cloud. SD is designed to aid identifying smooth surface where the correlation between different MISR viewpoints are muted by measurement noise. Larger NDAI values imply the presence of clouds.
+The features CORR, SD, and NDAI are an average linear correlation of radiation measurements at different view angles, the standard deviation within groups of MISR angle An camera red radiation measurements, and a ratio between the difference and sum of the mean radiation measurements from the first and fifth angle associated with a particular pixel region, respectively. It was stated that extensive exploratory data analysis combined with specific domain knowledge, such as the fact that ice and snow surfaces scatter radiation more isotropically than clouds, found the three features to be most useful in differentiating surface pixels from cloudy ones. High values of CORR alludes to either cloud-free condition or the presence of low altitude cloud. SD is designed to aid identifying smooth surface where the correlation between different MISR viewpoints are muted by measurement noise. Larger NDAI values imply the presence of clouds.
 
 \section{EDA}
 
@@ -116,7 +114,7 @@ Figure 1 displays the unprocessed image files for comparison with Figure 2, the 
 \end{figure}
 \subsection{Densities of NDAI, SD and CORR}
 
-The following three plots gives us a sense of what can be learned from NDAI, SD and CORR.  The densities are grouped by their expert labels, red is for `no cloud', green are for `unknown' and blue for `cloud'. We can see that NDAI has reasonably good separation between cloud and no cloud, in all three pictures, which is confirmed in our later modeling sections by Gini importance measures found in the random forest model and it's importance as a variable in LDA/QDA and logit models. In comparison, SD does not have as  good of a separation within the smaller SD values, however it is still clear that pixels labelled as clouds are the only pixels with higher SD values.  We thus expect the two features in combination can help determine whether a pixel with high NDAI should be labelled as a cloud by using the SD feature.  Finally CORR values appear to be a good separator for image 2, but much less so for image 1.  This uneven distribution of CORR values between images prompted us to cross validate our models across images, in addition to the folds created by dividing each image into 4 quadrants. 
+The following three plots gives us a sense of what can be learned from NDAI, SD and CORR.  The densities are grouped by their expert labels, red is for `no cloud', green are for `unknown' and blue for `cloud'. We can see that NDAI has reasonably good separation between cloud and no cloud, in all three pictures, which is confirmed in our later modeling sections by Gini importance measures found in the random forest model and its importance as a variable in LDA/QDA and logit models. In comparison, SD does not have as  good of a separation within the smaller SD values, however it is still clear that pixels labelled as clouds are the only pixels with higher SD values.  We thus expect the two features in combination can help determine whether a pixel with high NDAI should be labelled as a cloud by using the SD feature.  Finally CORR values appear to be a good separator for image 2, but much less so for image 1.  This uneven distribution of CORR values between images prompted us to cross validate our models across images, in addition to the folds created by dividing each image into 4 quadrants. 
 
 \begin{figure}[H]
 \minipage{0.32\textwidth}
@@ -317,7 +315,7 @@ We now discuss the trends in misclassification. As depicted in the above figure,
 
 The right half of Figure 17 displays the estimated coefficient values output by logistic regression at each stage of cross-validation. The points are a running average of the previously estimated coefficients, so we expect them to converge towards the higher iteration values. After the first few iterations for all four coefficients, we see convergent behavior, particularly for the intercept and NDAI terms. 
 
-As found in our other models, one image outperformed the others when used as a trainer. In the case of logit, trainng on image 3 gave substantially better predictions than training on either of the other images.The AUC's were .91, .876, and .96 when training was done on image 1, 2, and 3, respectively, with associated misclassification rates .155, .204, and .096. These results inform our hypothesis that images similar to image 3 will be difficult to classify unless similar data was included in the training set. Examination illustrates that image 3 has much sharper variation in its visual features than the other two images, a phenomenon that is only partially captured by our chosen covariates. Hence we expect our predictions to be fairly accurate on images with smooth changes within cloud and ground surfaces but possibly off in regions of intense heterogeneity.
+As found in our other models, one image outperformed the others when used as a trainer. In the case of logit, training on image 3 gave substantially better predictions than training on either of the other images.The AUC's were .91, .876, and .96 when training was done on image 1, 2, and 3, respectively, with associated misclassification rates .155, .204, and .096. These results inform our hypothesis that images similar to image 3 will be difficult to classify unless similar data were included in the training set. Examination illustrates that image 3 has much sharper variation in its visual features than the other two images, a phenomenon that is only partially captured by our chosen covariates. Hence we expect our predictions to be fairly accurate on images with smooth changes within cloud and ground surfaces but possibly off in regions of intense heterogeneity.
 
 \subsection{Random Forest}
 
@@ -383,7 +381,7 @@ We also trained on each image and tested on the remaining two. \\
   \caption{Convergence of ROC training on increasing number of quadrants in shuffled order}\label{}
 \end{figure}
   
-To gather a quantitative measurement of the importance of each feature, we first ran random forest using all the features and looked at the GIni importance measure.  This is calculated by recording the difference between the Gini measure of a random forest's predictions on a fold and the Gini measure with a particular feature's values randomly shuffled.  The intuition is that if a feature were crucial to the forest's trees, than randomly shuffling that feature will drastically decrease it's Gini measure.  Sure enough, NDAI, SD and CORR   consistently ranked as the clear top three in all cross validations. \\
+To gather a quantitative measurement of the importance of each feature, we first ran random forest using all the features and looked at the Gini importance measure.  This is calculated by recording the difference between the Gini measure of a random forest's predictions on a fold and the Gini measure with a particular feature's values randomly shuffled.  The intuition is that if a feature were crucial to the forest's trees, than randomly shuffling that feature will drastically decrease its Gini measure.  Sure enough, NDAI, SD and CORR   consistently ranked as the clear top three in all cross validations. \\
 
   \begin{figure}[H]
 \minipage{0.4\textwidth}
